test/types/sync/ferguson/sync-copy-init-other-sync.good
sync-copy-init-other-sync.chpl:2: error: Cannot initialize one sync var directly from another; try applying a method like .readFE(), .readFF(), etc. to the pre-existing variable
